# neonEXIF

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: mappedfile.hpp  neonexif.hpp  reader.hpp  tiff_tags.hpp
include/neonexif/: from_chars.hpp  lens_name_parser.hpp  levenshtein.hpp  mappedfile.hpp  neonexif.hpp  reader.hpp  tag_helpers.hpp  tiff.hpp  tiff_tags.hpp
src/: canon.cpp  canon_lens_id.cpp  lens_name_parser.cpp  mappedfile.cpp  neonexif.cpp  nikon.cpp  nikon_lens_id.cpp  tiff.cpp
test/: CMakeLists.txt  add_exif_to_jpeg.cpp  generate_exif.cpp  matrix.cpp  read_file.cpp  sample_exif_data.hpp
